--- a/firebase.json
+++ b/firebase.json
@@ -12,17 +12,11 @@
     }
   ],
   "hosting": {
-    "public": "build",
+    "public": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
