--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^23.2.0",
     "jsdom-global": "^3.0.2",
-    "text-encoding": "^0.7.0"
+    "text-encoding": "^0.7.0",
+    "whatwg-url": "^14.0.0"
   },
   "name": "firebase-auth",
   "version": "1.0.0",
